Corrected the alignment

--- a/frontend/src/Components/Navbar/Navbar.styles.scss
+++ b/frontend/src/Components/Navbar/Navbar.styles.scss
@@ -4,10 +4,16 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  // border: 2px solid red;
   .nav-left {
+    // border: 2px solid red;
     height: 100%;
-    width: 70px;
-    padding: 25px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    // width: 70px;
+    // padding: 25px;
   }
   .nav-right {
     width: 50%;
